--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>The Demon List</title>
 
         <!-- Replace your server icon by uploading an image file named "list_icon.png"-->
-        <link rel="icon" href="/list_icon.png" />
+        <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLpi9cyoPCm7tR4apCM6uMovp6EDRMMQoEO-oDjXGgOg&s=10" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
